addressed SonarQube warnings reported by Eclipse plugin