@@ -3,7 +3,6 @@ package uk.gov.companieshouse.api.testdata.controller;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -362,7 +361,7 @@ public class TestDataController {
                     accountPenaltiesData.getPenalties().stream()
                             .filter(penalty -> transactionReference.equals(
                                     penalty.getTransactionReference()))
-                            .collect(Collectors.toList())
+                            .toList()
             );
         }
         return ResponseEntity.ok(accountPenaltiesData);
