@@ -11,12 +11,12 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 import org.bson.types.ObjectId;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+
 import uk.gov.companieshouse.api.testdata.exception.DataException;
 import uk.gov.companieshouse.api.testdata.exception.NoDataFoundException;
 import uk.gov.companieshouse.api.testdata.model.entity.AccountPenalties;
@@ -68,7 +68,7 @@ public class AccountPenaltiesServiceImpl implements AccountPenaltiesService {
                                                            AccountPenalties accountPenalties) {
         return accountPenalties.getPenalties().stream()
                 .filter(p -> p.getTransactionReference().equals(penaltyRef))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -416,7 +416,7 @@ public class AccountPenaltiesServiceImpl implements AccountPenaltiesService {
 
         List<PenaltyData> penalties = accountPenalties.getPenalties().stream()
                 .map(this::mapToAccountPenaltyData)
-                .collect(Collectors.toList());
+                .toList();
 
         accountPenaltiesData.setPenalties(penalties);
 
