@@ -5,9 +5,10 @@ import java.time.ZoneOffset;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+
 import uk.gov.companieshouse.api.testdata.exception.DataException;
 import uk.gov.companieshouse.api.testdata.model.entity.Basket;
 import uk.gov.companieshouse.api.testdata.model.entity.Capital;
@@ -95,7 +96,7 @@ public class MissingImageDeliveriesImpl implements DataService<CertificatesData,
                     capital.setFigure(c.getFigure());
                     return capital;
                 })
-                .collect(Collectors.toList());
+                .toList();
             filingHistoryDescriptionValues.setCapital(capitalList);
         }
 
